--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
     <h1>Ini Website Saya!</h1>
     <p>Ini foto saya:</p>
     
-    <!-- Tampilkan foto dari folder assets -->
-    <img src="{{ url_for('static', filename='foto-saya.jpg') }}" 
+    <!-- Tampilkan foto dari folder static -->
+    <img src="{{ url_for('static', filename='nama-foto.jpeg') }}" 
          width="300" 
          alt="Foto Saya">
     
